Added Personal Touch

--- a/my-app/src/style/index.css
+++ b/my-app/src/style/index.css
@@ -139,7 +139,7 @@
   }
   .flexSpaceNull {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   /* FONT SIZES */
